--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,8 @@
 body {
-    background-color: #222;
-    color: gold;
+    background-color: #E12800;
+    color: silver;
     text-align: center;
+    font-family: fantasy, "Times New Roman", Times, serif;
 }
 
 header {
@@ -13,11 +14,11 @@ section {
     margin: 10px auto;
 }
 
-.item {
+.song {
     width: 30%;
     margin: 10px auto;
     border: 2px solid #aaa;
-    background-color: #444;
+    background-color: #E12800;
 }
 
 input {
